深度克隆、GC